# mudapp

./: README.md  mudapp.db  pyproject.toml
mudapp/: database.py  main.py  models.py  mudapp.db  schemas.py
tests/: test_mudapp.py
